<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <TextView
            android:id="@+id/tvTitulo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/titulo"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/clMapa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="spread" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clMapa"
            android:layout_width="0dp"
            android:layout_height="320dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitulo"
            app:layout_constraintBottom_toTopOf="@id/tvDescripcion"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

                <ImageView
                    android:id="@+id/ivAnillo"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/cd_anillo"
                    android:src="@android:drawable/ic_menu_compass"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

                <ImageButton
                    android:id="@+id/btnGondor"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/gondor"
                    android:src="@android:drawable/ic_menu_mylocation"
                    app:layout_constraintCircle="@id/ivAnillo"
                    app:layout_constraintCircleRadius="120dp"
                    app:layout_constraintCircleAngle="0"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    android:id="@+id/btnRohan"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/rohan"
                    android:src="@android:drawable/ic_menu_myplaces"
                    app:layout_constraintCircle="@id/ivAnillo"
                    app:layout_constraintCircleRadius="120dp"
                    app:layout_constraintCircleAngle="120"
                    tools:ignore="MissingConstraints" />

                <ImageButton
                    android:id="@+id/btnMordor"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:contentDescription="@string/mordor"
                    android:src="@android:drawable/ic_menu_view"
                    app:layout_constraintCircle="@id/ivAnillo"
                    app:layout_constraintCircleRadius="120dp"
                    app:layout_constraintCircleAngle="240"
                    tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/tvDescripcion"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/descripcion"
            app:layout_constraintTop_toBottomOf="@id/clMapa"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>